// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rm-secrets command rm-secrets fails if no flags are set 1`] = `
"The following errors occurred:
  [2mMissing required flag organization[22m
[2m  Missing required flag repositories[22m
[2m  Missing required flag secrets[22m
See more help with --help"
`;

exports[`rm-secrets command rm-secrets fails org are set 1`] = `
"The following errors occurred:
  [2mMissing required flag repositories[22m
[2m  Missing required flag secrets[22m
See more help with --help"
`;

exports[`rm-secrets command rm-secrets fails org,repo are set 1`] = `
"The following error occurred:
  [2mMissing required flag secrets[22m
See more help with --help"
`;
